[package]
name = "gap-sys"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { version = "0.65.1", features = ["experimental"] }

[dependencies]
anyhow = "1.0.71"
tokio = { version = "1.28.1", features = ["full"] }
