[package]
name = "gap-sys"
version = "0.2.3"
edition = "2021"
description = "Rust bindings to GAP - Groups, Algorithms, Programming - a System for Computational Discrete Algebra"
homepage = "https://www.gap-system.org/"
repository = "https://github.com/symbolica-ai/gap-sys"
readme = "README.md"
keywords = ["math", "algebra", "groups", "gap", "bindings"]
categories = ["mathematics", "algorithms"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { version = "0.65.1", features = ["experimental"] }
cc = "1.0.79"

[dependencies]
anyhow = "1.0.71"
